--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -1,10 +1,10 @@
 .heroWrap {
     position: relative;
     padding: 48px 62px 32px;
-   background-image: url('../../assets/bg.png');
-   background-repeat: no-repeat;
-   background-position: top right;
-   background-size: auto;
+    background-image: url('../../assets/bg.webp');
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: auto;
 }
 
 .heroTitle {
@@ -15,6 +15,10 @@
     line-height: 120%;
     text-transform: uppercase;
     color: var(--whitef2);
+}
+
+.breakTag {
+    display: none;
 }
 
 .heroTitle__gradient {
@@ -140,6 +144,10 @@
     transition: opacity .3s ease-in-out;
 }
 
+.appLink__icon {
+    margin-right: 8px;
+}
+
 .appLink__textWrap_title {
     margin-bottom: 2px;
     font-size: 12px;
@@ -151,4 +159,138 @@
     font-size: 20px;
     line-height: 120%;
     color: var(--whitef2);
+}
+
+@media (max-width: 1366px) {
+
+    .heroTitle {
+        max-width: 710px;
+        font-size: 65px;
+    }
+
+    .statList__item:not(:last-child) {
+        margin-right: 80px;
+    }
+}
+
+@media (max-width: 1024px) {
+
+    .heroTitle {
+        margin-bottom: 10px;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .heroDescr {
+        margin-bottom: 20px;
+    }
+
+    .heroStatsWrap {
+        margin-bottom: 30px;
+    }
+
+    .heroBtn {
+        margin-bottom: 40px;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .heroWrap {
+        padding: 20px 16px 12px;
+        background-image: url('../../assets/bg-small.webp');
+    }
+
+    .heroTitle {
+        font-size: 50px;
+    }
+
+    .heroDescr {
+        font-size: 28px;
+    }
+
+    .statList__item_title {
+        font-size: 40px;
+    }
+
+    .heroBtn {
+        padding: 12px;
+        width: 70%;
+    }
+}
+
+@media (max-width: 576px) {
+
+    .heroTitle {
+        margin-bottom: 20px;
+        font-size: 40px;
+        line-height: 108%;
+        text-align: center;
+    }
+
+    .heroTitle__spacing {
+        word-break: break-all;
+    }
+
+    .breakTag {
+        display: inline-block;
+    }
+
+    .heroDescr {
+        max-width: 204px;
+        margin: 0 auto;
+        margin-bottom: 32px;
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .statList {
+        width: 100%;
+        justify-content: center;
+        margin: 0 auto;
+        margin-bottom: 28px;
+    }
+
+    .statList__item:not(:last-child) {
+        margin-right: 49px;
+    }
+
+    .statList__item_title {
+        font-size: 28px;
+    }
+
+    .statList__item_descr {
+        font-size: 14px;
+        line-height: 143%;
+    }
+
+    .heroBtn {
+        margin-bottom: 18px;
+        width: 100%;
+        font-size: 20px;
+        line-height: 120%;
+    }
+
+    .heroAppsWrap {
+        justify-content: center;
+    }
+
+    .appLink {
+        max-width: 100px;
+        padding: 4px 8px;
+    }
+
+    .appLink__icon {
+        width: 20px;
+        height: 20px;
+    }
+
+    .appLink__textWrap_title {
+        font-size: 10px;
+    }
+
+    .appLink__textWrap_descr {
+        font-size: 14px;
+        line-height: 100%;
+    }
 }
